[package]
name = "jjsploit_executor"
version = "0.1.0"
edition = "2021"

[dependencies]
native-tls = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.8"
tauri = { version = "1.0", features = ["api-all"] }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "jjsploit_executor"
path = "src/main.rs"